<resources>
    <string name="app_name">RedditReaderApp</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_content_description">Ad</string>
    <string name="type_a_sub_reddit">Type a sub-reddit</string>
    <string name="refresh_feed">Refresh Feed</string>
    <string name="bookmark_this_feed">BookMark This Feed</string>
    <string name="feed_comment_image">Feed Comment Image</string>
    <string name="comment">comment</string>
    <string name="author">Author</string>
    <string name="last_updated">Last Updated</string>
    <string name="date_added">Date Added :</string>
    <string name="author_tv">Author :</string>
    <string name="todo">TODO</string>
</resources>