<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/white_50"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="@color/fichaya_purple"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="noScroll">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:letterSpacing="0.04"
                    android:text="@string/app_name"
                    android:textColor="@color/white_50"
                    android:textSize="18sp" />

            </FrameLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentHeadingConstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        android:background="@color/white_50">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:id="@+id/Thumbnail"
            android:contentDescription="@string/feed_comment_image" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPostReply"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/bookmark_this_feed"
            android:textColor="@color/fichaya_black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Thumbnail"
            android:layout_alignBottom="@+id/Thumbnail"
            android:layout_marginEnd="10dp"/>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/Thumbnail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/Thumbnail"
            app:layout_constraintBottom_toBottomOf="@id/Thumbnail"
            android:layout_marginStart="10dp">

            <TextView
                android:textColor="@color/fichaya_secondary_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Title"
                android:layout_marginTop="3dp"
                android:text="@string/comment"
                android:gravity="center"/>

            <TextView
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Author"
                android:textColor="@color/fichaya_black"
                android:layout_marginTop="3dp"
                android:text="@string/author"
                android:gravity="center"
                android:layout_below="@+id/Title"/>

            <TextView
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Updated"
                android:layout_marginTop="3dp"
                android:text="@string/last_updated"
                android:textColor="@color/fichaya_black"
                android:gravity="center"
                android:layout_below="@+id/Author"/>


        </RelativeLayout>


        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/postLoadingProgressBar"
            android:layout_centerInParent="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecycer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/commentHeadingConstLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/detail_item"
        tools:itemCount="5"/>
</androidx.constraintlayout.widget.ConstraintLayout>